
fswebcam-xxxxxxxx
  
  - Return a non-zero if the capture fails.
  - Add option to change camera timeout from default of 10 seconds.
    (James McCormac)
  - Add new Bayer palettes. (Eugen Hristev)
  - Add WebP output support.
  - Add option to dump raw frames to stdout. (Philipp Simon Schmidt)

fswebcam-20140113
  
  - New method of iterating over all V4L2 controls for a device. (Tom Bürgel)
  - Fix: double free when both mmap and read fail. (Shayan Elhami)
  - Remove duplicate 'frame' in help text. (Grozdan)

fswebcam-20110717
  
  - Fixed crash when using --no-timestamp option.
  - Cleaned up a few small compiler warnings.
  - Fix pointer type in src_v4l2_set_fps() (hauptmech)

fswebcam-20101118
  
  - Enable libgd fontconfig support if available. Default font is now "sans:10".
  - Add S561 compressed palette support.
  - Fix small memory leak in the logging system.
  - Add option to swap colour channels in the image.

fswebcam-20100622
  
  - Add basic Y16 support. (16-bit greyscale, gets shifted down to 8-bit)
  - A few fixes for the V4L1 source and other areas. (Pete Zaitcev)
  - Format conversions have been separated out from fswebcam.c.

fswebcam-20100405
  
  - Fix typo and add missing code for parsing --fps option. (Luca Niccoli)

fswebcam-20100401
  
  - LDFLAGS should come after object files. (Thomas Spahni)
  - Don't display banner if the font fails to load. (Luca Niccoli)
  - Fix typos.
  - Added SGBRG8 and SGRBG8 palette types (for V4L2 sources only).
  - Added --fps option.

fswebcam-20091224
  
  - Fix memset() error in src_v4l1.c introduced in yesterdays release.
    (Thomas Spahni)

fswebcam-20091223
  
  - Stop configure warning about datarootdir being ignored.
  - Updated the videodev.h and videodev2.h header files.
  - Corrected a number of memory leaks and a potential buffer overflow.
    (Thomas Spahni)
  - Escape minus signs in the man page. (Luca Niccoli)
  - Removed debian/ subdirectory. (Luca Niccoli)
  - Removed spec and ebuild files.