@@ -56,6 +56,12 @@ Default behaviour is to capture a single image and exit.
 Sets the offset to use when calculating when the next image is due in loop mode. Value can be positive or negative.
 
 .TP
+\fB\-\-count\fR \fI<number>\fR
+Sets the number of times to capture an image in loop mode before exiting.
+.IP
+Default is 0, loop forever.
+
+.TP
 \fB\-b\fR, \fB\-\-background\fR
 Run in the background. In this mode \fIstdout\fR and console logging are unavailable.
 
